--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/11214171"><b>Helper-Assisted Coding for Gaussian Wiretap Channels: Deep Learning Meets PhySec</b></a>,<br />  V. Rana, R. Chou, T. Kim<br />  <i>IEEE Transactions on Communications</i>, 2025.<br /></p>
 </li>
-<li><p><a href="https://ieeexplore.ieee.org/document/11173671"><b>Covert Communication and Key Generation Over Quantum State-Dependent Channels</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, , 71(12), Dec. 2025.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/11173671"><b>Covert Communication and Key Generation Over Quantum State-Dependent Channels</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 71(12), Dec. 2025.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2201.11891"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br />  <i>IEEE Transactions on Information Theory</i>, 71(11), Nov. 2025.<br /></p>
 </li>
@@ -97,25 +97,25 @@
 <ol reversed>
 <li><p><a href="publications.html"><b>Minimax Data Sanitization with Distortion Constraint and Adversarial Inference</b></a>,<br /> A. Moatazedian, Y. Yakimenka, R. Chou, J. Kliewer <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;25</i>, Sydney, Australia, Oct. 2025.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Improved Achievable Rate for Single Server SPIR over BEC</b></a>,<br /> A. Shekofteh, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
+<li><p><a href="https://www.researchgate.net/publication/397354473_Improved_Achievable_Rate_for_Single-Server_SPIR_over_Binary_Erasure_Channels"><b>Improved Achievable Rate for Single Server SPIR over BEC</b></a>,<br /> A. Shekofteh, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Single-Server SPIR over Binary Erasure Channels: Benefits of Noisy Side Information</b></a>,<br /> A. Shekofteh, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
+<li><p><a href="https://www.researchgate.net/publication/397355005_Single-Server_SPIR_over_Binary_Erasure_Channels_Benefits_of_Noisy_Side_Information"><b>Single-Server SPIR over Binary Erasure Channels: Benefits of Noisy Side Information</b></a>,<br /> A. Shekofteh, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>An Achievable Rate Region for Hypothesis Testing and User Identification with Multiple Sources</b></a>,<br /> V. Yachongka, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
+<li><p><a href="https://www.researchgate.net/publication/397355061_An_Achievable_Rate_Region_for_Hypothesis_Testing_and_User_Identification_with_Multiple_Sources"><b>An Achievable Rate Region for Hypothesis Testing and User Identification with Multiple Sources</b></a>,<br /> V. Yachongka, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Regionally Robust Autoencoder-Based Channel Codes</b></a>,<br /> A. Belbasi, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
+<li><p><a href="https://www.researchgate.net/publication/397354890_Regionally_Robust_Autoencoder-BasedChannel_Codes"><b>Regionally Robust Autoencoder-Based Channel Codes</b></a>,<br /> A. Belbasi, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Joint Covert Communication and Covert Secret Key Generation via Causal CSI</b></a>,<br /> H. ZivariFard, R. Chou, X. Wang <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/11195556"><b>Joint Covert Communication and Covert Secret Key Generation via Causal CSI</b></a>,<br /> H. ZivariFard, R. Chou, X. Wang <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Covert Communication Over a Quantum MAC With a Helper</b></a>,<br /> H. ZivariFard, R. Chou, X. Wang <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/11195212"><b>Covert Communication Over a Quantum MAC With a Helper</b></a>,<br /> H. ZivariFard, R. Chou, X. Wang <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Privacy-Constrained Lossy Function Computation in Distributed Databases</b></a>,<br /> V. Yachongka, R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/11195280"><b>Privacy-Constrained Lossy Function Computation in Distributed Databases</b></a>,<br /> V. Yachongka, R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Constrained Optimization of Access Functions in Uniform Secret Sharing</b></a>,<br /> A. Morteza, R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/11195691"><b>Constrained Optimization of Access Functions in Uniform Secret Sharing</b></a>,<br /> A. Morteza, R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Sequential Interval Passing for Compressed Sensing</b></a>,<br /> S. Habib, R. Chou, T. Kim <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/11195431"><b>Sequential Interval Passing for Compressed Sensing</b></a>,<br /> S. Habib, R. Chou, T. Kim <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Secret Sharing Over a Two Receiver Classical-Quantum Broadcast Channel</b></a>,<br /> T. Welling, R. Chou, A. Yener <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/11195606"><b>Secret Sharing Over a Two Receiver Classical-Quantum Broadcast Channel</b></a>,<br /> T. Welling, R. Chou, A. Yener <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/abstract/document/10807012"><b>Covert Communication with Positive Rate Over State-Dependent Quantum Channels</b></a>,<br /> H. ZivariFard, R. Chou, X. Wang <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;24</i>, Shenzen, China, Nov. 2024.<br /></p>
 </li>
