--- a/group.html
+++ b/group.html
@@ -42,6 +42,10 @@
 </li>
 </ul>
 <ul>
+<li><p>Zuhair Zaki</p>
+</li>
+</ul>
+<ul>
 <li><p>Dr. Vidhi Rana</p>
 </li>
 </ul>
@@ -90,8 +94,7 @@
 </li>
 <li><p>Carson Wang (NSF REU, Summer 2019)</p>
 </li>
-<li><p>Christopher Gravelle (NSF REU, Summer 2019)
-</p>
+<li><p>Christopher Gravelle (NSF REU, Summer 2019)</p>
 </li>
 <li><p>Ezekiel Kuenzi (NSF REU, Summer 2018)</p>
 </li>
