--- a/publications.html
+++ b/publications.html
@@ -35,9 +35,9 @@
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="https://arxiv.org/abs/2503.08632"><b>Secret-Key Generation from Private Identifiers under Channel Uncertainty</b></a>,<br />  V. Yachongka, R. Chou<br /> <i>IEEE Transactions on Information Forensics and Security</i>, 2025.<br /> </p>
-</li>
 <li><p><a href="https://ieeexplore.ieee.org/document/11214171"><b>Helper-Assisted Coding for Gaussian Wiretap Channels: Deep Learning Meets PhySec</b></a>,<br />  V. Rana, R. Chou, T. Kim<br />  <i>IEEE Transactions on Communications</i>, 2025.<br /></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2503.08632"><b>Secret-Key Generation from Private Identifiers under Channel Uncertainty</b></a>,<br />  V. Yachongka, R. Chou<br /> <i>IEEE Transactions on Information Forensics and Security</i>, 20, 2025.<br /> </p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/11173671"><b>Covert Communication and Key Generation Over Quantum State-Dependent Channels</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 71(12), Dec. 2025.<br /></p>
 </li>
