--- a/publications.html
+++ b/publications.html
@@ -26,20 +26,20 @@
 <ol reversed>
 <li><p><a href="https://arxiv.org/abs/2509.15047"><b>Distributed Batch Matrix Multiplication: Download Rate, Randomness and Privacy Trade-Offs</b></a>,<br />  A. Morteza, R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Sep. 2025.<br /></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2505.04076"><b>Secret Sharing Schemes from Correlated Random Variables and Rate-Limited Public Communication</b></a>,<br />  R. Sultana, R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, May 2025.<br /></p>
-</li>
-<li><p><a href="https://arxiv.org/abs/2503.14682"><b>Dual-Source SPIR over a noiseless MAC without Data Replication or Shared Randomness</b></a>,<br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Mar. 2025.<br />
+<li><p><a href="https://arxiv.org/abs/2505.04076"><b>Secret Sharing Schemes from Correlated Random Variables and Rate-Limited Public Communication</b></a>,<br />  R. Sultana, R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, May 2025.<br />
 </p>
 </li>
 </ol reversed>
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="https://ieeexplore.ieee.org/document/11214171"><b>Helper-Assisted Coding for Gaussian Wiretap Channels: Deep Learning Meets PhySec</b></a>,<br />  V. Rana, R. Chou, T. Kim<br />  <i>IEEE Transactions on Communications</i>, 2025.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2503.14682"><b>Dual-Source SPIR over a noiseless MAC without Data Replication or Shared Randomness</b></a>,<br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, 2026.<br /></p>
+</li>
+<li><p><a href="https://ieeexplore.ieee.org/document/11214171"><b>Helper-Assisted Coding for Gaussian Wiretap Channels: Deep Learning Meets PhySec</b></a>,<br />  V. Rana, R. Chou, T. Kim<br />  <i>IEEE Transactions on Communications</i>, 73(12), Dec. 2025.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2503.08632"><b>Secret-Key Generation from Private Identifiers under Channel Uncertainty</b></a>,<br />  V. Yachongka, R. Chou<br /> <i>IEEE Transactions on Information Forensics and Security</i>, 20, 2025.<br /> </p>
 </li>
-<li><p><a href="https://ieeexplore.ieee.org/document/11173671"><b>Covert Communication and Key Generation Over Quantum State-Dependent Channels</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 71(12), Dec. 2025.<br /></p>
+<li><p><a href="https://arxiv.org/pdf/2511.17504"><b>Covert Communication and Key Generation Over Quantum State-Dependent Channels</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 71(12), Dec. 2025.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2201.11891"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br />  <i>IEEE Transactions on Information Theory</i>, 71(11), Nov. 2025.<br /></p>
 </li>
