--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,7 @@
 <ol reversed>
 <li><p><a href="https://arxiv.org/abs/2503.14682"><b>Dual-Source SPIR over a noiseless MAC without Data Replication or Shared Randomness</b></a>,<br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, 2026.<br /></p>
 </li>
-<li><p><a href="https://ieeexplore.ieee.org/document/11214171"><b>Helper-Assisted Coding for Gaussian Wiretap Channels: Deep Learning Meets PhySec</b></a>,<br />  V. Rana, R. Chou, T. Kim<br />  <i>IEEE Transactions on Communications</i>, 73(12), Dec. 2025.<br /></p>
+<li><p><a href="https://www.researchgate.net/publication/396767758_Helper-Assisted_Coding_for_Gaussian_Wiretap_Channels_Deep_Learning_Meets_PhySec"><b>Helper-Assisted Coding for Gaussian Wiretap Channels: Deep Learning Meets PhySec</b></a>,<br />  V. Rana, R. Chou, T. Kim<br />  <i>IEEE Transactions on Communications</i>, 73(12), Dec. 2025.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2503.08632"><b>Secret-Key Generation from Private Identifiers under Channel Uncertainty</b></a>,<br />  V. Yachongka, R. Chou<br /> <i>IEEE Transactions on Information Forensics and Security</i>, 20, 2025.<br /> </p>
 </li>
@@ -95,7 +95,7 @@
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Minimax Data Sanitization with Distortion Constraint and Adversarial Inference</b></a>,<br /> A. Moatazedian, Y. Yakimenka, R. Chou, J. Kliewer <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;25</i>, Sydney, Australia, Oct. 2025.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/11240365"><b>Minimax Data Sanitization with Distortion Constraint and Adversarial Inference</b></a>,<br /> A. Moatazedian, Y. Yakimenka, R. Chou, J. Kliewer <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;25</i>, Sydney, Australia, Oct. 2025.<br /></p>
 </li>
 <li><p><a href="https://www.researchgate.net/publication/397354473_Improved_Achievable_Rate_for_Single-Server_SPIR_over_Binary_Erasure_Channels"><b>Improved Achievable Rate for Single Server SPIR over BEC</b></a>,<br /> A. Shekofteh, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
 </li>
